--- a/index.scss
+++ b/index.scss
@@ -16,6 +16,11 @@
            li{
                list-style: none;
                margin-left: 73px;
+               cursor: pointer;
+
+               &:hover{
+                   list-style: disc;
+               }
            }
         }
     }
@@ -29,6 +34,7 @@
         background-image: url("../assets/image/Banner/b-1.png");
         background-size: 100%;
         background-position: center;
+        clip-path: path("M10,10 h20% a20,20 0 0 1 20,20 v200 a20,20 0 0 1 -20,20 h-200 a20,20 0 0 1 -20,-20 v-200 a20,20 0 0 1 20,-20 z")
     }
 }
 
@@ -155,6 +161,7 @@
     height: 50px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 12px 40px;
 
     &__logo{
