--- a/css/global.css
+++ b/css/global.css
@@ -107,7 +107,6 @@ h4 {
 .font-utility {
   font-family: "Helvetica";
   font-weight: 500;
-  text-decoration: underline;
   font-size: 20px;
   line-height: 36px;
   color: #FFFFFF;
@@ -118,5 +117,62 @@ h4 {
     font-size: 12px;
     line-height: 18px;
     color: #FFFFFF;
+  }
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  background-image: url("../assets/button-outLine.png");
+  background-position: center center;
+  background-size: 100% 100%;
+  width: 200px;
+  height: 90px;
+  vertical-align: super;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+button .content {
+  display: block;
+  overflow: hidden;
+}
+
+button .content span {
+  display: inline-block;
+  position: relative;
+}
+
+button .content span:after {
+  content: attr(data-text);
+  position: absolute;
+  left: 100%;
+  padding: 0 20px;
+}
+
+button:hover .content span {
+  -webkit-animation: marquee 2s linear infinite;
+          animation: marquee 2s linear infinite;
+}
+
+@-webkit-keyframes marquee {
+  0% {
+    -webkit-transform: translate3d(0%, 0, 0);
+            transform: translate3d(0%, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-112%, 0, 0);
+            transform: translate3d(-112%, 0, 0);
+  }
+}
+
+@keyframes marquee {
+  0% {
+    -webkit-transform: translate3d(0%, 0, 0);
+            transform: translate3d(0%, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(-112%, 0, 0);
+            transform: translate3d(-112%, 0, 0);
   }
 }
