--- a/global.scss
+++ b/global.scss
@@ -68,9 +68,59 @@ h4{
 .font-utility{
     font-family: "Helvetica";
     font-weight: 500;
-    text-decoration: underline;
     @include fontSize(20px, 36px);
     @include mobile {
         @include fontSize(12px, 18px);
     }
 }
+
+button{
+    background-color: transparent;
+    border: none;
+    background-image: url("../assets/button-outLine.png");
+    background-position: center center;
+    background-size: 100% 100%;
+    width: 200px;
+    height: 90px;
+    vertical-align: super;
+    cursor: pointer;
+    white-space: nowrap;
+
+    .content{
+        display: block;
+        overflow: hidden;
+
+        span{
+            display: inline-block;
+            position: relative;
+    
+            &:after{
+                content:attr(data-text);
+                position: absolute;
+                left: 100%;
+                padding: 0 20px;
+            }
+        }
+    }  
+    
+    &:hover{
+        .content{
+            span{
+                animation: marquee 2s linear infinite;
+            }
+        }
+    }
+}
+
+@keyframes marquee{
+
+    0% {
+        transform: translate3d(0%,0,0)
+    }
+
+    100% {
+        transform: translate3d(-112%,0,0)
+    }
+
+}
+
