--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,9 @@
   list-style: disc;
 }
 
-.slider {
+.banner {
+  max-width: 1400px;
+  margin: auto;
   text-align: center;
   height: 50vw;
   max-height: 700px;
@@ -37,11 +39,26 @@
   margin: auto;
 }
 
-.slider__img {
+.banner__wrapper {
+  height: 100%;
+  white-space: nowrap;
+}
+
+.banner__button {
+  color: #FFFFFF;
+}
+
+.banner__img {
   max-width: 1200px;
   width: 100%;
   margin: 18px auto 0;
   height: 100%;
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.banner__img-1 {
   -webkit-mask-image: url("../assets/image/banner/mask1.png");
           mask-image: url("../assets/image/banner/mask1.png");
   -webkit-mask-repeat: no-repeat;
@@ -51,14 +68,56 @@
   -webkit-mask-position: center;
           mask-position: center;
   background-image: url("../assets/image/Banner/banner1.png");
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
+}
+
+.banner__img-2 {
+  -webkit-mask-image: url("../assets/image/banner/mask2.png");
+          mask-image: url("../assets/image/banner/mask2.png");
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+  -webkit-mask-position: center;
+          mask-position: center;
+  background-image: url("../assets/image/Banner/banner2.png");
+}
+
+.banner__img-3 {
+  -webkit-mask-image: url("../assets/image/banner/mask3.png");
+          mask-image: url("../assets/image/banner/mask3.png");
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+  -webkit-mask-position: center;
+          mask-position: center;
+  background-image: url("../assets/image/Banner/banner3.png");
+}
+
+.banner__doodle {
+  position: absolute;
+  z-index: 100;
+}
+
+.banner__doodle-smile {
+  top: 76px;
+  right: 15%;
+  width: 15%;
+  max-width: 128px;
+}
+
+.banner__doodle-sign {
+  top: 65%;
+  left: 12%;
+  width: 40%;
+  max-width: 540px;
 }
 
 .productSlider {
+  max-width: 1400px;
+  margin: auto;
   width: 95%;
-  margin: 70px auto 0;
+  margin: 100px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -83,14 +142,18 @@
 
 .productSlider__item {
   position: absolute;
+  z-index: 100;
 }
 
-.productSlider__item:nth-child(1) {
-  right: 80px;
+.productSlider__item:nth-of-type(1) {
+  right: 120px;
+  top: 120px;
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
 }
 
-.productSlider__item:nth-child(1) img {
-  width: 375px;
+.productSlider__item:nth-of-type(1) img {
+  width: 260px;
   -webkit-mask-image: url("../assets/image/Seasonal Item/mask1.png");
           mask-image: url("../assets/image/Seasonal Item/mask1.png");
   -webkit-mask-repeat: no-repeat;
@@ -101,13 +164,13 @@
           mask-position: center;
 }
 
-.productSlider__item:nth-child(2) {
-  right: 600px;
-  top: 380px;
+.productSlider__item:nth-of-type(2) {
+  right: 120px;
+  top: 650px;
 }
 
-.productSlider__item:nth-child(2) img {
-  width: 260px;
+.productSlider__item:nth-of-type(2) img {
+  width: 220px;
   -webkit-mask-image: url("../assets/image/Seasonal Item/mask2.png");
           mask-image: url("../assets/image/Seasonal Item/mask2.png");
   -webkit-mask-repeat: no-repeat;
@@ -118,13 +181,13 @@
           mask-position: center;
 }
 
-.productSlider__item:nth-child(3) {
-  right: 80px;
-  top: 650px;
+.productSlider__item:nth-of-type(3) {
+  right: 600px;
+  top: 480px;
 }
 
-.productSlider__item:nth-child(3) img {
-  width: 220px;
+.productSlider__item:nth-of-type(3) img {
+  width: 260px;
   -webkit-mask-image: url("../assets/image/Seasonal Item/mask3.png");
           mask-image: url("../assets/image/Seasonal Item/mask3.png");
   -webkit-mask-repeat: no-repeat;
@@ -135,8 +198,23 @@
           mask-position: center;
 }
 
+.productSlider__doodle {
+  position: absolute;
+  z-index: 100;
+}
+
+.productSlider__doodle-line1 {
+  right: 0;
+  top: 150px;
+}
+
+.productSlider__doodle-line2 {
+  left: -200px;
+  bottom: 100px;
+}
+
 .marquee {
-  height: 780px;
+  height: 1500px;
   background-image: url("../assets/image/Full Screen/b-2.png");
 }
 
@@ -144,12 +222,13 @@
   white-space: nowrap;
   padding-top: 32px;
   position: relative;
-  left: -600px;
 }
 
 .collections {
-  margin-top: 150px;
-  height: 760px;
+  max-width: 1400px;
+  margin: auto;
+  margin-top: 290px;
+  height: 800px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -159,34 +238,60 @@
           justify-content: center;
 }
 
-.collections__container {
-  position: relative;
+.collections__introContainer {
+  overflow: hidden;
+  height: 200px;
+}
+
+.collections__introContainer .swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .collections__mainImg {
-  position: absolute;
-  left: -100px;
-  top: 0px;
   width: 100%;
-  max-width: 780px;
   height: 495px;
-  background-image: url("../assets/image/Swiper/Swiper1.png");
   background-position: center;
   background-size: 100%;
-  -webkit-mask-image: url("../assets/image/Swiper/mask.png");
-          mask-image: url("../assets/image/Swiper/mask.png");
-  -webkit-mask-repeat: no-repeat;
-          mask-repeat: no-repeat;
-  -webkit-mask-size: 100% 100%;
-          mask-size: 100% 100%;
-  -webkit-mask-position: center;
-          mask-position: center;
+}
+
+.collections__mainImg-1 {
+  background-image: url("../assets/image/Swiper/Swiper1.png");
+}
+
+.collections__mainImg-2 {
+  background-image: url("../assets/image/Swiper/Swiper2.png");
+}
+
+.collections__mainImg-3 {
+  background-image: url("../assets/image/Swiper/Swiper3.png");
+}
+
+.collections__mainImg-4 {
+  background-image: url("../assets/image/Swiper/Swiper4.png");
+}
+
+.collections__mainImg-5 {
+  background-image: url("../assets/image/Swiper/Swiper5.png");
+}
+
+.collections__mainImg-6 {
+  background-image: url("../assets/image/Swiper/Swiper6.png");
 }
 
 .collections__content {
   position: relative;
-  left: 50px;
-  top: 100px;
+  left: 100px;
+  border: 1px solid #FFFFFF;
+  border-radius: 40px;
   padding: 25px 40px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -198,11 +303,24 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  border: 1px solid #FFFFFF;
-  width: 100%;
+  width: 95%;
   max-width: 800px;
-  height: 550px;
-  border-radius: 40px;
+  height: 500px;
+}
+
+.collections__mask {
+  position: relative;
+  left: -250px;
+  top: 0px;
+  max-width: 780px;
+  -webkit-mask-image: url("../assets/image/Swiper/mask.png");
+          mask-image: url("../assets/image/Swiper/mask.png");
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+  -webkit-mask-position: center;
+          mask-position: center;
 }
 
 .collections__button {
@@ -254,6 +372,30 @@
           transform: rotate(90deg);
 }
 
+.collections__doodle {
+  position: absolute;
+  z-index: 100;
+}
+
+.collections__doodle-line {
+  top: -180px;
+  right: 10%;
+  width: 20%;
+  max-width: 200px;
+}
+
+.collections__doodle-earth {
+  top: 50%;
+  left: 8%;
+  width: 20%;
+  max-width: 150px;
+}
+
+.collections__doodle-ball {
+  top: -150px;
+  right: 14%;
+}
+
 .modalBlock {
   height: 800px;
   display: -webkit-box;
@@ -269,10 +411,34 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+}
+
+.modalBlock__doodle-stone {
+  position: absolute;
+}
+
+.modalBlock__doodle-stone:nth-child(1) {
+  right: 15%;
+  top: 10%;
+  width: 50px;
+}
+
+.modalBlock__doodle-stone:nth-child(2) {
+  right: 15%;
+  top: 80%;
+  width: 70px;
+}
+
+.modalBlock__doodle-stone:nth-child(3) {
+  right: 80%;
+  top: 20%;
+  width: 60px;
 }
 
 .modalBlock__3Dmodal {
   position: absolute;
+  z-index: 100;
 }
 
 .modalBlock__3Dmodal img {
@@ -281,6 +447,12 @@
 
 .modalBlock h1 {
   white-space: nowrap;
+}
+
+.modalBlock__logo {
+  position: absolute;
+  width: 90%;
+  z-index: 200;
 }
 
 .footer {
