some layout change

--- a/css/index.css
+++ b/css/index.css
@@ -30,16 +30,22 @@
 }
 
 .banner {
-  max-width: 1400px;
-  margin: auto;
   text-align: center;
-  height: 50vw;
-  max-height: 700px;
+  padding-bottom: 50%;
   width: 95%;
   margin: auto;
+  position: relative;
+}
+
+@media (max-width: 1024px) {
+  .banner {
+    padding-bottom: 100%;
+    width: 90%;
+  }
 }
 
 .banner__wrapper {
+  position: absolute;
   height: 100%;
   white-space: nowrap;
 }
@@ -48,12 +54,17 @@
   color: #FFFFFF;
 }
 
+@media (max-width: 1024px) {
+  .banner__button {
+    display: none;
+  }
+}
+
 .banner__img {
-  max-width: 1200px;
   width: 100%;
   margin: 18px auto 0;
   height: 100%;
-  background-size: 100%;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -70,6 +81,19 @@
   background-image: url("../assets/image/Banner/banner1.png");
 }
 
+@media (max-width: 1024px) {
+  .banner__img-1 {
+    -webkit-mask-image: url("../assets/image/mobile-banner/mask1.png");
+            mask-image: url("../assets/image/mobile-banner/mask1.png");
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+    -webkit-mask-position: center;
+            mask-position: center;
+  }
+}
+
 .banner__img-2 {
   -webkit-mask-image: url("../assets/image/banner/mask2.png");
           mask-image: url("../assets/image/banner/mask2.png");
@@ -82,6 +106,19 @@
   background-image: url("../assets/image/Banner/banner2.png");
 }
 
+@media (max-width: 1024px) {
+  .banner__img-2 {
+    -webkit-mask-image: url("../assets/image/mobile-banner/mask2.png");
+            mask-image: url("../assets/image/mobile-banner/mask2.png");
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+    -webkit-mask-position: center;
+            mask-position: center;
+  }
+}
+
 .banner__img-3 {
   -webkit-mask-image: url("../assets/image/banner/mask3.png");
           mask-image: url("../assets/image/banner/mask3.png");
@@ -92,6 +129,19 @@
   -webkit-mask-position: center;
           mask-position: center;
   background-image: url("../assets/image/Banner/banner3.png");
+}
+
+@media (max-width: 1024px) {
+  .banner__img-3 {
+    -webkit-mask-image: url("../assets/image/mobile-banner/mask3.png");
+            mask-image: url("../assets/image/mobile-banner/mask3.png");
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+    -webkit-mask-position: center;
+            mask-position: center;
+  }
 }
 
 .banner__doodle {
@@ -113,6 +163,12 @@
   max-width: 540px;
 }
 
+@media (max-width: 1024px) {
+  .banner__doodle-sign {
+    top: 30%;
+  }
+}
+
 .productSlider {
   max-width: 1400px;
   margin: auto;
@@ -124,6 +180,16 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media (max-width: 1024px) {
+  .productSlider {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 90%;
+  }
 }
 
 .productSlider__title {
@@ -138,6 +204,13 @@
           flex: 1;
   height: 1054px;
   position: relative;
+}
+
+@media (max-width: 1024px) {
+  .productSlider__items {
+    -ms-flex-preferred-size: 700px;
+        flex-basis: 700px;
+  }
 }
 
 .productSlider__item {
@@ -165,12 +238,12 @@
 }
 
 .productSlider__item:nth-of-type(2) {
-  right: 120px;
-  top: 650px;
+  right: 600px;
+  top: 480px;
 }
 
 .productSlider__item:nth-of-type(2) img {
-  width: 220px;
+  width: 260px;
   -webkit-mask-image: url("../assets/image/Seasonal Item/mask2.png");
           mask-image: url("../assets/image/Seasonal Item/mask2.png");
   -webkit-mask-repeat: no-repeat;
@@ -182,12 +255,12 @@
 }
 
 .productSlider__item:nth-of-type(3) {
-  right: 600px;
-  top: 480px;
+  right: 120px;
+  top: 650px;
 }
 
 .productSlider__item:nth-of-type(3) img {
-  width: 260px;
+  width: 220px;
   -webkit-mask-image: url("../assets/image/Seasonal Item/mask3.png");
           mask-image: url("../assets/image/Seasonal Item/mask3.png");
   -webkit-mask-repeat: no-repeat;
@@ -196,6 +269,63 @@
           mask-size: 100% 100%;
   -webkit-mask-position: center;
           mask-position: center;
+}
+
+@media (max-width: 1024px) {
+  .productSlider__item {
+    -webkit-transform-origin: top right;
+            transform-origin: top right;
+  }
+  .productSlider__item p {
+    text-align: center;
+  }
+  .productSlider__item:nth-of-type(1) {
+    right: 30px;
+    top: 20px;
+    -webkit-transform: scale(1.4);
+            transform: scale(1.4);
+  }
+  .productSlider__item:nth-of-type(1) img {
+    width: 150px;
+    -webkit-mask-image: url("../assets/image/Seasonal Item/mask1.png");
+            mask-image: url("../assets/image/Seasonal Item/mask1.png");
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+    -webkit-mask-position: center;
+            mask-position: center;
+  }
+  .productSlider__item:nth-of-type(2) {
+    left: -1px;
+    top: 180px;
+  }
+  .productSlider__item:nth-of-type(2) img {
+    width: 110px;
+    -webkit-mask-image: url("../assets/image/Seasonal Item/mask2.png");
+            mask-image: url("../assets/image/Seasonal Item/mask2.png");
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+    -webkit-mask-position: center;
+            mask-position: center;
+  }
+  .productSlider__item:nth-of-type(3) {
+    right: 30px;
+    top: 350px;
+  }
+  .productSlider__item:nth-of-type(3) img {
+    width: 110px;
+    -webkit-mask-image: url("../assets/image/Seasonal Item/mask3.png");
+            mask-image: url("../assets/image/Seasonal Item/mask3.png");
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+            mask-size: 100% 100%;
+    -webkit-mask-position: center;
+            mask-position: center;
+  }
 }
 
 .productSlider__doodle {
@@ -208,14 +338,41 @@
   top: 150px;
 }
 
+@media (max-width: 1024px) {
+  .productSlider__doodle-line1 {
+    top: -180px;
+    right: 50px;
+    -webkit-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+}
+
 .productSlider__doodle-line2 {
   left: -200px;
   bottom: 100px;
 }
 
+@media (max-width: 1024px) {
+  .productSlider__doodle-line2 {
+    bottom: 100px;
+    left: 0;
+    -webkit-transform-origin: left;
+            transform-origin: left;
+    -webkit-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+}
+
 .marquee {
   height: 1500px;
   background-image: url("../assets/image/Full Screen/b-2.png");
+}
+
+@media (max-width: 1024px) {
+  .marquee {
+    height: 360px;
+    background-size: cover;
+  }
 }
 
 .marquee h1 {
@@ -224,18 +381,29 @@
   position: relative;
 }
 
+@media (max-width: 1024px) {
+  .marquee h1 {
+    padding-top: 20px;
+  }
+  .marquee h1 img {
+    width: 120px;
+    vertical-align: bottom;
+  }
+}
+
 .collections {
-  max-width: 1400px;
-  margin: auto;
-  margin-top: 290px;
-  height: 800px;
+  width: 70%;
+  margin: 290px auto 0;
+  /* @include MaxLimit;
+    height: 800px;
+    display: flex;
+    justify-content: center; */
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+}
+
+.collections__intro {
+  position: absolute;
+  bottom: 0;
 }
 
 .collections__introContainer {
@@ -243,22 +411,9 @@
   height: 200px;
 }
 
-.collections__introContainer .swiper-slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
 .collections__mainImg {
   width: 100%;
-  height: 495px;
+  height: 100%;
   background-position: center;
   background-size: 100%;
 }
@@ -289,30 +444,20 @@
 
 .collections__content {
   position: relative;
-  left: 100px;
   border: 1px solid #FFFFFF;
   border-radius: 40px;
-  padding: 25px 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  width: 95%;
-  max-width: 800px;
-  height: 500px;
+  padding: 0 40px 50%;
+  height: 0;
+  top: -200px;
+  left: 80px;
+  z-index: 100;
 }
 
 .collections__mask {
   position: relative;
-  left: -250px;
-  top: 0px;
-  max-width: 780px;
+  padding-bottom: 50%;
+  left: -100px;
+  z-index: 200;
   -webkit-mask-image: url("../assets/image/Swiper/mask.png");
           mask-image: url("../assets/image/Swiper/mask.png");
   -webkit-mask-repeat: no-repeat;
@@ -321,6 +466,11 @@
           mask-size: 100% 100%;
   -webkit-mask-position: center;
           mask-position: center;
+}
+
+.collections__wrapper {
+  position: absolute;
+  height: 100%;
 }
 
 .collections__button {
@@ -386,7 +536,7 @@
 
 .collections__doodle-earth {
   top: 50%;
-  left: 8%;
+  left: 0%;
   width: 20%;
   max-width: 150px;
 }
@@ -412,6 +562,12 @@
       -ms-flex-align: center;
           align-items: center;
   position: relative;
+}
+
+@media (max-width: 1024px) {
+  .modalBlock {
+    height: 500px;
+  }
 }
 
 .modalBlock__doodle-stone {
@@ -472,4 +628,16 @@
 
 .footer__logo {
   height: 30px;
+}
+
+@media (max-width: 1024px) {
+  .footer__logo {
+    height: 20px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .footer {
+    padding: 12px 14px;
+  }
 }
