--- a/css/global.css
+++ b/css/global.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-image: url("../assets/image/Background/bg.png");
   background-repeat: repeat;
@@ -18,7 +22,7 @@ h1 {
   color: #FFFFFF;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1024px) {
   h1 {
     font-size: 44px;
     line-height: 44px;
@@ -34,7 +38,7 @@ h2 {
   color: #FFFFFF;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1024px) {
   h2 {
     font-size: 40px;
     line-height: 40px;
@@ -49,7 +53,7 @@ h3 {
   color: #FFFFFF;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1024px) {
   h3 {
     font-size: 40px;
     line-height: 60px;
@@ -64,7 +68,7 @@ h4 {
   color: #FFFFFF;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1024px) {
   h4 {
     font-size: 32px;
     line-height: 38px;
@@ -80,7 +84,7 @@ h4 {
   color: #FFFFFF;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1024px) {
   .font-body1 {
     font-size: 18px;
     line-height: 27px;
@@ -96,7 +100,7 @@ h4 {
   color: #FFFFFF;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1024px) {
   .font-body2 {
     font-size: 16px;
     line-height: 24px;
@@ -112,7 +116,7 @@ h4 {
   color: #FFFFFF;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 1024px) {
   .font-utility {
     font-size: 12px;
     line-height: 18px;
@@ -131,6 +135,14 @@ button {
   vertical-align: super;
   cursor: pointer;
   white-space: nowrap;
+}
+
+@media (max-width: 1024px) {
+  button {
+    margin-top: 16px;
+    width: 120px;
+    height: 56px;
+  }
 }
 
 button .content {
@@ -153,6 +165,13 @@ button .content span:after {
 button:hover .content span {
   -webkit-animation: marquee 2s linear infinite;
           animation: marquee 2s linear infinite;
+}
+
+@media (max-width: 1024px) {
+  button:hover .content span {
+    -webkit-animation: none;
+            animation: none;
+  }
 }
 
 @-webkit-keyframes marquee {
@@ -233,5 +252,18 @@ button:hover .content span {
   to {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
+  }
+}
+
+.mobile {
+  display: none;
+}
+
+@media (max-width: 1024px) {
+  .mobile {
+    display: block;
+  }
+  .desktop {
+    display: none;
   }
 }
