--- a/index.scss
+++ b/index.scss
@@ -27,29 +27,37 @@
 }
 
 .banner{
-    @include MaxLimit;
     text-align: center;
-    height:50vw;
-    max-height: 700px;
+    padding-bottom: 50%;
     width: 95%;
     margin: auto;
+    position: relative;
+
+    @include mobile {
+        padding-bottom: 100%;
+        width: 90%;
+    }
 
     &__wrapper{
+        position: absolute;
         height:100%;
         white-space: nowrap;
     }
 
     &__button{
         color:$white;
+
+        @include mobile {
+            display: none;
+        }
     }
 
 
     &__img{
-        max-width: 1200px;
         width:100%;
         margin: 18px auto 0;
         height:100%;
-        background-size: 100%;
+        background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
 
@@ -57,12 +65,17 @@
             &-#{$index}{
                 @include mask($index , "banner");
                 background-image: url("../assets/image/Banner/banner"+$index+".png");
+
+                @include mobile{
+                    @include mask($index , "mobile-banner");
+                }
             }
         }
 
         @include bannerStyle(1);
         @include bannerStyle(2);
         @include bannerStyle(3);
+
     }
 
     &__doodle{
@@ -81,6 +94,10 @@
             left:12%;
             width: 40%;
             max-width: 540px;
+
+            @include mobile{
+                top:30%;
+            }
         }
     }
 }
@@ -92,6 +109,11 @@
     display: flex;
     justify-content: space-between;
 
+    @include mobile{
+        flex-direction: column;
+        width: 90%;
+    }
+
     &__title{
         flex: 1.5;
     }
@@ -100,6 +122,10 @@
         flex: 1;
         height: 1054px;
         position: relative;
+
+        @include mobile{
+            flex-basis: 700px;
+        }
         
     }
     &__item{
@@ -108,8 +134,12 @@
 
         @mixin itemsStyle($index , $right , $top , $width , $scale) {
             &:nth-of-type(#{$index}){
-                @if $right{
+                @if $right > 0{
                     right:$right;
+                }
+
+                @if $right < 0{
+                    left:$right;
                 }
 
                 @if $top{
@@ -128,8 +158,20 @@
         }
 
         @include itemsStyle(1 , 120px , 120px , 260px , 1.4);
-        @include itemsStyle(2 , 120px , 650px , 220px , null);
-        @include itemsStyle(3 , 600px , 480px , 260px , null);
+        @include itemsStyle(2 , 600px , 480px , 260px , null);
+        @include itemsStyle(3 , 120px , 650px , 220px , null);
+
+        @include mobile{
+            transform-origin: top right;
+
+            p{
+                text-align: center
+            }
+
+            @include itemsStyle(1 , 30px , 20px , 150px , 1.4);
+            @include itemsStyle(2 , -1px , 180px , 110px , null);
+            @include itemsStyle(3 , 30px , 350px , 110px , null);
+        }
     }
 
     &__doodle{
@@ -139,11 +181,24 @@
         &-line1{
             right: 0;
             top: 150px;
+
+            @include mobile{
+                top:-180px;
+                right:50px;
+                transform: scale(0.4);
+            }
         }
 
         &-line2{
             left: -200px;
             bottom: 100px;
+
+            @include mobile{
+                bottom: 100px;
+                left: 0;
+                transform-origin: left;
+                transform: scale(0.4);
+            }
         }
     }
 }
@@ -152,40 +207,53 @@
     height: 1500px;
     background-image: url("../assets/image/Full Screen/b-2.png");
 
+    @include mobile{
+        height: 360px;
+        background-size: cover;
+    }
+
     h1{
         white-space:nowrap;
         padding-top: 32px;
         position: relative;
+
+        @include mobile{
+            padding-top: 20px;
+
+            img{
+                width: 120px;
+                vertical-align: bottom;
+            }
+        }        
     }
 }
 
 .collections{
-    @include MaxLimit;
+    width: 70%;
+    margin: 290px auto 0 ;
 
-    margin-top: 290px;
+    /* @include MaxLimit;
     height: 800px;
-    position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: center; */
+
+    position: relative;
+
+    &__intro{
+        position: absolute;
+        bottom:0;
+    }
 
     &__introContainer{
         overflow: hidden;
         height: 200px;
-        
-
-        .swiper-slide{
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-        }
-        
     }
     
 
     &__mainImg{
         
         width: 100%;
-        height: 495px;
+        height: 100%;
         background-position: center;
         background-size: 100%;
 
@@ -204,26 +272,30 @@
         
     }
 
+
     &__content{
+
         position: relative;
-        left:100px;
         border:1px solid $white;
         border-radius: 40px;
-        padding: 25px 40px;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        width: 95%;
-        max-width: 800px;
-        height: 500px;
+        padding: 0 40px 50%;
+        height: 0;
+        top: -200px;
+        left: 80px;
+        z-index: 100;
     }
 
     &__mask{
         position: relative;
-        left: -250px;
-        top:0px;
-        max-width: 780px;
+        padding-bottom: 50%;
+        left: -100px;
+        z-index: 200;
         @include mask("" , "Swiper"); 
+    }
+
+    &__wrapper{
+        position: absolute;
+        height:100%;
     }
 
     &__button{
@@ -280,7 +352,7 @@
 
         &-earth{
             top:50%;
-            left:8%;
+            left:0%;
             width: 20%;
             max-width: 150px;
         }
@@ -299,6 +371,10 @@
     justify-content: center;
     align-items: center;
     position: relative;
+
+    @include mobile{
+        height: 500px
+    }
 
     &__doodle{
         &-stone{
@@ -349,6 +425,14 @@
 
     &__logo{
         height: 30px;
+
+        @include mobile{
+            height: 20px;
+        }
+    }
+
+    @include mobile{
+        padding: 12px 14px;
     }
 
 }
